# GeneralizableRacing

./: .gitignore  README.md  install.sh  note.md  pyproject.toml  train.sh
extensions/diff.lab/: setup.py
extensions/diff.lab/config/: extension.toml
extensions/diff.lab/diff/lab/controllers/: __init__.py  controller_diff.py  controller_diff_cfg.py  lee_controller_position_and_yaw.py  lee_controller_position_and_yaw_cfg.py  thrust_controller_diff.py
extensions/diff.lab/diff/lab/controllers/tuning/: pid_tuning_ctbr.py  pid_tuning_lv.py  pid_tuning_ps.py
extensions/diff.lab/diff/lab/envs/: __init__.py  manager_based_diff_rl_env.py  manager_based_diff_rl_env_cfg.py
extensions/diff.lab/diff/lab/managers/: __init__.py  action_manager.py  loss_manager.py  loss_term_cfg.py
extensions/diff.lab/diff/lab/sensors/: __init__.py
extensions/diff.lab/diff/lab/sensors/imu/: __init__.py  geodetic_utils.py  imu.py  imu_cfg.py  imu_noise.py
extensions/diff.lab/diff/lab/sensors/test/: add_sensors_on_robot.py
extensions/diff.lab/diff/lab/terrains/: __init__.py  terrain_generator.py  terrain_importer.py  terrain_importer_cfg.py
extensions/diff.lab/diff/lab/terrains/config/: __init__.py  racing_cfg.py
extensions/diff.lab/diff/lab/terrains/trimesh/: __init__.py  racing_terrains.py  racing_terrains_cfg.py  utils.py
extensions/diff.lab/diff/lab/utils/: __init__.py  mesh_tools.py  visualization.py
extensions/diff.lab_assets/: setup.py
extensions/diff.lab_assets/config/: extension.toml
extensions/diff.lab_assets/diff/lab_assets/: __init__.py  quadcopter.py
extensions/diff.lab_tasks/: setup.py
extensions/diff.lab_tasks/config/: extension.toml
extensions/diff.lab_tasks/diff/lab_tasks/: __init__.py
extensions/diff.lab_tasks/diff/lab_tasks/tasks/locomotion/velocity/: velocity_env_cfg.py
extensions/diff.lab_tasks/diff/lab_tasks/tasks/quadcopter/: __init__.py  crazyfile_env_cfg.py  quadcopter_env_cfg.py
extensions/diff.lab_tasks/diff/lab_tasks/tasks/quadcopter/agents/: __init__.py  rsl_rl_ppo_cfg.py
extensions/diff.lab_tasks/diff/lab_tasks/tasks/quadcopter_diff/: __init__.py  racing_ctbr_env.py  reach_target_ctbr_env.py  reach_target_lv_env.py
standalone/diff_rl/: cli_args.py  naive_model.py  naive_play.py  naive_train.py  play.py  train.py
standalone/diff_rl/algorithms/: __init__.py  algo.py  bptt.py  config.py  model.py  runner.py
standalone/diff_rl/test/: test_bare_scene.py  test_collider.py  test_dynamics.py  test_env.py  test_gradients.py
standalone/offline/: data_collector.py  train.py
standalone/rsl_rl/: play.py  train.py
standalone/rsl_rl/ext/algorithms/: __init__.py  distillation.py  ppo.py  ppo_l2c2.py  ppo_lcp.py
standalone/rsl_rl/ext/modules/: __init__.py  student_teacher.py  vision_actor_critic.py  vision_student_teacher.py
standalone/rsl_rl/ext/runners/: __init__.py  on_policy_runner.py
standalone/rsl_rl/ext/storage/: __init__.py  rollout_storage.py  rollout_storage_l2c2.py
standalone/rsl_rl/ext/utils/: __init__.py  exporter.py  onnx_validation.py  utils.py
(+26 files in other folders)
